# porthawk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_action.py  start_dashboard.bat  start_dashboard.py  start_dashboard.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  usage-examples.md
docs/superpowers/plans/: 2026-03-26-public-api.md
examples/: example_output.json
porthawk/: __init__.py  api.py  cli.py  cve.py  dashboard.py  diff.py  evasion.py  exceptions.py  fingerprint.py  honeypot.py  nmap_import.py  notify.py  passive_os.py  predictor.py  reporter.py  sarif.py  scanner.py  service_db.py  syn_scan.py  throttle.py  udp_scan.py  ui.py
tests/: test_api.py  test_cli.py  test_cve.py  test_dashboard.py  test_diff.py  test_evasion.py  test_exceptions.py  test_fingerprint.py  test_honeypot.py  test_ipv6.py  test_nmap_import.py  test_notify.py  test_passive_os.py  test_predictor.py  test_reporter.py  test_sarif.py  test_scanner.py  test_service_db.py  test_syn_scan.py  test_throttle.py  test_udp_scan.py  test_ui.py
